--- a/package.json
+++ b/package.json
@@ -19,5 +19,17 @@
     "testing"
   ],
   "author": "Sauli Tähkäpää",
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "dependencies": {
+    "cleankill": "^1.0.0",
+    "lodash": "^3.5.0",
+    "q": "^1.2.0",
+    "sauce-connect-launcher": "^0.10.1",
+    "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "chai": "^2.1.2",
+    "mockery": "^1.4.0",
+    "sinon": "^1.14.1"
+  }
 }
