--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "chai": "^2.1.2",
+    "mocha": "^2.2.1",
     "mockery": "^1.4.0",
     "sinon": "^1.14.1"
   }
